accounts + auth + docketord completed
